Finished the matches tab, can add match, delete match, change results based on selected season